sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:6: error: value reverse is not a member of (Int, Int)
  for (i <- (lgr-2,0).reverse)
                      ^