sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  
  var lgr=getNombreValeurs()
  
  for (i <- (lgr-2,0).reverse)
  {
    for (j<- 0 to i)
    {
      if (plusPetit(j,j+1))
      {
        echange(j,j+1)
      }
    }
  }
}